samples/_failures_safe/1761521151_e88c29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de9fcc29.c: In function ‘main’:
./samples/SAFE/__tmp_de9fcc29.c:144:9: error: expected declaration or statement at end of input
  144 |         size_t len = strlen(input_buffer);
      |         ^~~~~~
./samples/SAFE/__tmp_de9fcc29.c:144:9: error: expected declaration or statement at end of input
